# ghcp-mon

./: .gitignore  BUILDING.md  Cargo.toml  Containerfile  LICENSE  README.md  build.rs
.github/extensions/ghcp-mon-workflows/: extension.mjs
migrations/: 0001_init.sql
obsidian/ghcp-mon/.obsidian/: graph.json  workspace.json
obsidian/ghcp-mon/backend/: Source Files.md  Source Index.md
obsidian/ghcp-mon/frontend/: Source Files.md  Source Index.md
reference/semconv-gen-ai/: README.md  VERSION
scripts/: dist.sh
src/: error.rs  lib.rs  local_session.rs  main.rs  model.rs  server.rs  static_assets.rs
src/api/: mod.rs
src/db/: dao.rs  mod.rs
src/ingest/: mod.rs  otlp.rs  replay.rs
src/memory-bank/: api.md  db-schema.md  db.md  ingest.md  normalize.md  overview.md  server-and-lifecycle.md  ws.md
src/normalize/: mod.rs
src/ws/: handler.rs  mod.rs
tests/: app_error.rs  broadcaster.rs  cli_main.rs  dao.rs  db_module.rs  ingest.rs  ingest_pipeline.rs  local_session.rs  model_envelope.rs  normalize_pipeline.rs  otlp_handlers.rs  replay_endpoint.rs  rest_api.rs  server_router.rs  static_assets.rs  ws_handler.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
web/memory-bank/: api.md  app-shell.md  components.md  overview.md  scenarios.md  state.md
web/src/: App.tsx  main.tsx  styles.css
web/src/api/: client.ts  types.ts  ws.ts
web/src/components/: CodeBlock.tsx  Column.tsx  ColumnHeader.tsx  ContextGrowthWidget.tsx  Inspector.tsx  JsonView.tsx  KindBadge.tsx  MessageView.tsx  TextBlock.tsx  Workspace.tsx  content.ts
(+333 files in other folders)
